--- a/apps/ai-worker/requirements.txt
+++ b/apps/ai-worker/requirements.txt
@@ -1,62 +1,63 @@
-attrs==21.2.0
-Automat==20.2.0
-Babel==2.8.0
-bcrypt==3.2.0
-blinker==1.4
-certifi==2020.6.20
-chardet==4.0.0
-click==8.0.3
-cloud-init==25.2
-colorama==0.4.4
-command-not-found==0.3
-configobj==5.0.6
-constantly==15.1.0
-cryptography==3.4.8
-dbus-python==1.2.18
-distro==1.7.0
-distro-info==1.1+ubuntu0.2
-httplib2==0.20.2
-hyperlink==21.0.0
-idna==3.3
-importlib-metadata==4.6.4
-incremental==21.3.0
-jeepney==0.7.1
-Jinja2==3.0.3
-jsonpatch==1.32
-jsonpointer==2.0
-jsonschema==3.2.0
-keyring==23.5.0
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-MarkupSafe==2.0.1
-more-itertools==8.10.0
-netifaces==0.11.0
-oauthlib==3.2.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.1
-pycurl==7.44.1
-PyGObject==3.42.1
-PyHamcrest==2.0.2
-PyJWT==2.3.0
-pyOpenSSL==21.0.0
-pyparsing==2.4.7
-pyrsistent==0.18.1
-pyserial==3.5
-python-apt==2.4.0+ubuntu4
-python-dotenv==1.0.1
-pytz==2022.1
-PyYAML==5.4.1
-requests==2.25.1
-SecretStorage==3.3.1
-service-identity==18.1.0
-six==1.16.0
-systemd-python==234
-Twisted==22.1.0
-ubuntu-pro-client==8001
-ufw==0.36.1
-unattended-upgrades==0.1
-urllib3==1.26.5
-wadllib==1.3.6
-zipp==1.0.0
-zope.interface==5.4.0
+annotated-types==0.7.0
+anyio==4.11.0
+audioread==3.0.1
+cachetools==6.2.1
+certifi==2025.10.5
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.0
+decorator==5.2.1
+exceptiongroup==1.3.0
+fastapi==0.109.0
+ffmpeg-python==0.2.0
+future==1.0.0
+google-api-core==2.26.0
+google-auth==2.41.1
+google-cloud-core==2.4.3
+google-cloud-pubsub==2.19.0
+google-cloud-storage==2.10.0
+google-crc32c==1.7.1
+google-resumable-media==2.7.2
+googleapis-common-protos==1.70.0
+grpc-google-iam-v1==0.14.2
+grpcio==1.75.1
+grpcio-status==1.62.3
+h11==0.16.0
+httptools==0.7.1
+idna==3.11
+joblib==1.5.2
+lazy_loader==0.4
+librosa==0.10.1
+llvmlite==0.45.1
+msgpack==1.1.2
+numba==0.62.1
+numpy==1.24.3
+packaging==25.0
+platformdirs==4.5.0
+pooch==1.8.2
+proto-plus==1.26.1
+protobuf==4.25.8
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.23
+pydantic==2.12.2
+pydantic_core==2.41.4
+pydub==0.25.1
+python-dotenv==1.1.1
+PyYAML==6.0.3
+requests==2.31.0
+rsa==4.9.1
+scikit-learn==1.7.2
+scipy==1.11.4
+sniffio==1.3.1
+soundfile==0.13.1
+soxr==1.0.0
+starlette==0.35.1
+threadpoolctl==3.6.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+urllib3==2.5.0
+uvicorn==0.27.0
+uvloop==0.21.0
+watchfiles==1.1.1
+websockets==15.0.1
