--- a/apps/ai-worker/requirements.txt
+++ b/apps/ai-worker/requirements.txt
@@ -1,5 +1,9 @@
+aiohttp==3.9.1
+aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.11.0
+async-timeout==4.0.3
+attrs==25.4.0
 audioread==3.0.1
 cachetools==6.2.1
 certifi==2025.10.5
@@ -10,6 +14,7 @@ decorator==5.2.1
 exceptiongroup==1.3.0
 fastapi==0.109.0
 ffmpeg-python==0.2.0
+frozenlist==1.8.0
 future==1.0.0
 google-api-core==2.26.0
 google-auth==2.41.1
@@ -30,11 +35,13 @@ lazy_loader==0.4
 librosa==0.10.1
 llvmlite==0.45.1
 msgpack==1.1.2
+multidict==6.7.0
 numba==0.62.1
 numpy==1.24.3
 packaging==25.0
 platformdirs==4.5.0
 pooch==1.8.2
+propcache==0.4.1
 proto-plus==1.26.1
 protobuf==4.25.8
 pyasn1==0.6.1
@@ -61,3 +68,4 @@ uvicorn==0.27.0
 uvloop==0.21.0
 watchfiles==1.1.1
 websockets==15.0.1
+yarl==1.22.0
