--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,8 @@ pip-log.txt
 # ----------------------------
 .env
 .env*.local
+.env.local
+.env.development.local
 !.env.example
 
 # ----------------------------
