--- a/apps/api/env.yml
+++ b/apps/api/env.yml
@@ -15,4 +15,4 @@ PUB_SUB_TOPIC_ID: 'haptic-studio-jobs'
 # --- Frontend Configuration ---
 # We will update this with your live Vercel URL after the frontend is deployed.
 # For now, this allows us to test the deployed API from our local machine.
-FRONTEND_URL: 'http://localhost:3001'
+FRONTEND_URL: 'https://haptic-studio.vercel.app'
